common/rsshub/browserless-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
  namespace: rsshub
  labels:
    app.kubernetes.io/component: browserless
    app.kubernetes.io/part-of: rsshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rsshub
      app.kubernetes.io/instance: rsshub
      app.kubernetes.io/component: browserless
      app.kubernetes.io/part-of: rsshub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rsshub
        app.kubernetes.io/instance: rsshub
        app.kubernetes.io/component: browserless
        app.kubernetes.io/part-of: rsshub
    spec:
      containers:
        - name: browserless
          image: browserless/chrome
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /pressure
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /pressure
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
