common/rsshub/rsshub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsshub
  namespace: rsshub
  labels:
    app.kubernetes.io/component: rsshub
    app.kubernetes.io/part-of: rsshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rsshub
      app.kubernetes.io/instance: rsshub
      app.kubernetes.io/component: rsshub
      app.kubernetes.io/part-of: rsshub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rsshub
        app.kubernetes.io/instance: rsshub
        app.kubernetes.io/component: rsshub
        app.kubernetes.io/part-of: rsshub
    spec:
      containers:
        - name: rsshub
          image: diygod/rsshub
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1200
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
