common/rsshub/browserless-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: browserless
  namespace: rsshub
  labels:
    app.kubernetes.io/component: browserless
    app.kubernetes.io/part-of: rsshub
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/instance: rsshub
    app.kubernetes.io/component: browserless
    app.kubernetes.io/part-of: rsshub
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
