common/rsshub/rsshub-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rsshub
  namespace: rsshub
  labels:
    app.kubernetes.io/component: rsshub
    app.kubernetes.io/part-of: rsshub
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/instance: rsshub
    app.kubernetes.io/component: rsshub
    app.kubernetes.io/part-of: rsshub
  ports:
    - name: http
      port: 1200
      targetPort: http
      protocol: TCP
